--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,20 +30,37 @@ dependencies:
   flutter:
     sdk: flutter
 
-
-  # The following adds the Cupertino Icons font to your application.
-  # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
+
+  permission_handler: ^9.2.0
+  carousel_slider: ^4.0.0
+  sliding_up_panel: ^2.0.0+1
+  webview_flutter: ^3.0.2
+  smooth_page_indicator: ^1.0.0+2
+  flutter_rating_bar: ^4.0.0
+  animated_text_kit: ^4.2.1
+  scroll_snap_list: ^0.8.4
+  table_calendar: ^3.0.3
+  provider: ^6.0.1
+  url_launcher: ^6.0.9
+  share_plus: ^2.1.4
+  google_maps_flutter: ^2.0.6
+  image_picker: ^0.8.3+3
+  flutter_native_image: ^0.0.6+1
+  expandable: ^5.0.1
+  bottom_bar_with_sheet: ^2.1.0
+  package_info_plus: ^1.3.1
+  flutter_spinkit: ^5.0.0
+  flutter_markdown: ^0.6.9
+  scroll_to_index: ^2.1.1
+  geolocator: ^8.2.0
+  pull_to_refresh: ^2.0.0
+
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
 
-  # The "flutter_lints" package below contains a set of recommended lints to
-  # encourage good coding practices. The lint set provided by the package is
-  # activated in the `analysis_options.yaml` file located at the root of your
-  # package. See that file for information about deactivating specific lint
-  # rules and activating additional ones.
   flutter_lints: ^2.0.0
 
 # For information on the generic Dart part of this file, see the
